--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -194,8 +194,11 @@ footer {
     padding: 0;
 }
 .carousel {
-    width:auto;
-    height: 600px;
+    width: 600px;
+    height: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
 }
 // .carousel-item {
 //     height:32rem;
